<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.sharksystem</groupId>
    <artifactId>SharkContracts</artifactId>
    <version>1.0</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Shark dependencies -->
        <dependency>
            <groupId>net.sharksystem</groupId>
            <artifactId>ASAPJava</artifactId>
            <version>0.7.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/ASAPJava.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sharksystem</groupId>
            <artifactId>SharkPeer</artifactId>
            <version>0.0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/SharkPeer.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sharksystem</groupId>
            <artifactId>SharkPKI</artifactId>
            <version>0.0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/SharkPKI.jar</systemPath>
        </dependency>

        <!-- GSON -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>